@@ -1,3 +1,10 @@
+2006-10-11 Jens Tkotz <jens@peino.de> 1.6-svn-b22
+
+ * Change: Move "Send as eCard" into albumItem options.
+
+ * New: Added attribute "separate" to albumItem options.
+	All separate options are shown *drumroll* separately.
+
 2006-10-10 Jens Tkotz <jens@peino.de> 1.6-svn-b21
 
  * Fix: Clickcounter in stats did not work.
